client/src/components/pages/visualization/visualization.scss
.dropzone {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  border-radius: 2px;
  border: 2px dashed #007ea7;
  background-color: #fafafa;
  color: #646c7f;
  outline: none;
  transition: border 0.24s ease-in-out;
  cursor: pointer;
}

.dropzone:disabled {
  cursor: default;
}

.faButton {
  background: transparent;
  border: none;
  outline: none;
}

#removeFile:hover {
  background: #cfd8dc;
}

.popover {
  min-width: 500px;
}

.popover-body {
  overflow-y: auto;
  max-height: 200px;
  white-space: pre-wrap;
}

a.font-14,
Button.font-14 {
  font-size: 14px !important;
}

ul {
  columns: 3;
  column-width: auto;
}

a.disabled,
input:disabled,
select:disabled,
button:disabled,
div[disabled] {
  cursor: not-allowed;
  pointer-events: all !important;
}

.active-secondary-navlinks {
  box-shadow: none !important;
  color: 'black';
}

.active-secondary-navlinks:after {
  content: '';
  display: block;
  padding-top: 4px;
  width: 100%;
  margin: 0 auto;
  border-bottom: 4px solid #fc8701 !important;
  margin-bottom: -5px;
}

.active-secondary-navlinks:after {
  content: '';
  display: block;
  padding-top: 2px;
  width: 100%;
  border-bottom: 2px solid #fc8701 !important;
  margin-bottom: -5px;
}

// kataegis table
div.react-bootstrap-table-pagination-list {
  display: flex;
}

ul.pagination.react-bootstrap-table-page-btns-ul {
  margin-left: auto;
}

